added test getPlayerById; added log4j2 to the project