@@ -1,13 +1,17 @@
 package snooker.test;
 
+import lombok.extern.log4j.Log4j2;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
 import snooker.model.Player;
 
-import java.net.URI;
+import java.net.URL;
+import java.util.Collections;
 import java.util.List;
 
 import static io.restassured.RestAssured.get;
+import static io.restassured.RestAssured.given;
+import static org.hamcrest.Matchers.equalTo;
 
 /**
  * 4 Player
@@ -15,18 +19,25 @@ import static io.restassured.RestAssured.get;
  * Example: api.snooker.org/?p=1 (Mark J Williams)
  * Output: Player info as JSON (one-dimensional)
  */
+@Log4j2
 public class PlayerEndpointTests {
 
     @ParameterizedTest
     @MethodSource("playerProvider")
     void givenPlayerId_thenCanFindPlayerById(Player player) {
-        System.out.println(player);
+        Integer playerId = player.getID();
+        given().baseUri("http://api.snooker.org").queryParam("p", playerId)
+                .log().ifValidationFails()
+                .get().then().assertThat().statusCode(200)
+                .assertThat().body("ID", equalTo(Collections.singletonList(playerId)));
+
+        log.info(player);
     }
 
 
     private static List<Player> playerProvider() throws Exception {
 //        URI endpoint = new URI("http://api.snooker.org/?p=1");
-        URI endpoint = new URI("http://api.snooker.org/?t=10&st=p&s=2015");
+        URL endpoint = new URL("http://api.snooker.org/?t=10&st=p&s=2015");
         return get(endpoint).body().jsonPath().getList(".", Player.class);
     }
 }
